# knowkute-file-chewer

./: .gitignore  README.md  knowkute-file-chewer.design.MD  nltk_stop_words.py  pyproject.toml  requirements.txt  stopwords_all_languages.txt
app/: config.py  main.py
app/routes/: file_routes.py  query_routes.py
app/services/: chunk_manager.py  embedding_service.py  file_processor.py  query_service.py
scripts/: download_all.sh  test_api.sh
tests/: test_chunk_manager.py  test_embedding_service.py  test_endpoints.py  test_file_processor.py  test_file_upload_all.py  test_file_upload_api.py  test_query_service.py
tests/resources/: AWS-Slides.pptx  sample.docx  sample.pptx  sample.xlsx
tests/resources/input/: Knowkute File Chewer - Swagger UI.mhtml  baseline-assessment-tool-excel-196658893.xls  file_example_XLS_5000.xls  sample.html  sample.xml
tests/resources/output/: 30th_Annual_Report_for_FY_2024-2025.pdf.json  AWS-Slides.pptx.json  AWS-Slides.pptx.txt  AppBody-Sample-English.docx.json  AppBody-Sample-English.docx.txt  Dolat_Capital_KPIT_Technologies_Q2FY25_Result_Update.pdf.json  Dolat_Capital_KPIT_Technologies_Q2FY25_Result_Update.pdf.txt  Knowkute File Chewer - Swagger UI.mhtml.json  Knowkute File Chewer - Swagger UI.mhtml.txt  Knowkute_File_Chewer.txt.json  Knowkute_File_Chewer.txt.txt  baseline-assessment-tool-excel-196658893.xls.json  baseline-assessment-tool-excel-196658893.xls.txt  file_example_XLS_5000.xls.json  file_example_XLS_5000.xls.txt  sample.html.json  sample.html.txt  sample.xml.json  sample.xml.txt
